--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "html-webpack-plugin": "^2.28.0",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.5.4",
     "react-dev-utils": "^0.5.2",
     "react-dom": "^15.5.4",
-    "react-hot-loader": "^1.3.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.4",
-    "react-router": "^4.1.1",
+    "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
     "webpack": "^2.4.1",
