--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "isomorphic-fetch": "^2.2.1",
     "progress-bar-webpack-plugin": "^1.9.3",
     "prop-types": "^15.5.8",
+    "pubsub-js": "^1.5.6",
     "react": "^15.5.4",
     "react-dev-utils": "^0.5.2",
     "react-dom": "^15.5.4",
