--- a/.eslintrc
+++ b/.eslintrc
@@ -61,5 +61,13 @@
             "error",
             120
         ],
+        'no-unused-vars': [
+            'warn',
+            {
+                'vars': 'all',
+                'args': 'after-used',
+                'caughtErrors': 'none'
+            }
+        ]
     }
 }
