--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {},
   "dependencies": {
     "antd": "^2.9.3",
+    "autoprefixer": "^7.1.0",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
@@ -26,6 +27,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.7.1",
@@ -34,9 +36,10 @@
     "eslint-plugin-react": "^6.10.3",
     "html-webpack-plugin": "^2.28.0",
     "isomorphic-fetch": "^2.2.1",
+    "less-loader": "^4.0.3",
+    "postcss-loader": "^2.0.5",
     "progress-bar-webpack-plugin": "^1.9.3",
     "prop-types": "^15.5.8",
-    "pubsub-js": "^1.5.6",
     "react": "^15.5.4",
     "react-dev-utils": "^0.5.2",
     "react-dom": "^15.5.4",
@@ -48,6 +51,8 @@
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
+    "style-loader": "^0.17.0",
+    "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.4"
   }
