--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-import": "^1.2.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -36,7 +37,9 @@
     "eslint-plugin-react": "^6.10.3",
     "html-webpack-plugin": "^2.28.0",
     "isomorphic-fetch": "^2.2.1",
+    "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "moment": "^2.18.1",
     "postcss-loader": "^2.0.5",
     "progress-bar-webpack-plugin": "^1.9.3",
     "prop-types": "^15.5.8",
